--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,34 @@
+
+.img-fluid{
+
+
+    height: 550px;
+}
+
+
 @media(min-width: 768px) { 
 
 .news-input {
  width: 50%;
 
 }
+
+
+
+ }
+
+
+
+ @media(max-width:511px) { 
+
+  
+
+    .img-fluid{
+
+
+        height: 300px;
+    }
+
+
 
  }
